@@ -2,7 +2,8 @@
 
 #include <stdio.h>
 
-#define LOG_LEVEL_NORMAL        0 // shows only error, severe and fatal
+#define LOG_LEVEL_NONE         -1 // nothing at all is logged
+#define LOG_LEVEL_NORMAL        0 // shows notice, error, severe and fatal
 #define LOG_LEVEL_DEBUG         1 // shows all
 #define LOG_LEVEL_DEBUG_FREEMEM 2 // shows all + shows freemem on screen
 #define LOG_LEVEL_DEBUG_SAMBA   3 // shows all + freemem on screen + samba debugging
